app1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: neg-demo-svc # Name of Service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec: # Service's specification
  type: NodePort
  selector:
    run: neg-demo-app # Selects Pods labelled run: neg-demo-app
  ports:
    - port: 80
      name: demo
      protocol: TCP
      targetPort: 9376
    - port: 81
      name: tutum
      protocol: TCP
      targetPort: 80
    - port: 82
      name: nginx
      protocol: TCP
      targetPort: 80
